# alembic

./: .coveragerc  .gitignore  .gitreview  .hgignore  .hgtags  .pre-commit-config.yaml  CHANGES  LICENSE  MANIFEST.in  README  README.rst  README.unittests  README.unittests.rst  noxfile.py  pyproject.toml  reap_dbs.py  reap_oracle_dbs.py  run_tests.py  sample_notes.txt  setup.cfg  setup.py  test.cfg  tox.ini
.github/: FUNDING.yml  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  question.md
.github/workflows/: run-on-pr.yaml  run-test.yaml
alembic/: __init__.py  autogenerate.py  batch.py  command.py  command.pyi  compat.py  config.py  context.py  context.pyi  environment.py  migration.py  op.py  op.pyi  operations.py  options.py  revision.py  script.py  util.py
alembic/autogenerate/: __init__.py  _postgresql.py  api.py  compare.py  compose.py  generate.py  render.py  rewriter.py
alembic/autogenerate/compare/: __init__.py  check_constraints.py  comments.py  constraints.py  schema.py  server_defaults.py  tables.py  types.py  util.py
alembic/ddl/: __init__.py  _autogen.py  base.py  impl.py  mssql.py  mssql.pyi  mysql.py  mysql.pyi  op.py  oracle.py  oracle.pyi  postgresql.py  sqlite.py
alembic/operations/: __init__.py  base.py  batch.py  ops.py  schemaobj.py  toimpl.py
alembic/runtime/: environment.py  migration.py  plugins.py
alembic/script/: __init__.py  base.py  revision.py  write_hooks.py
alembic/templates/async/: alembic.ini.mako  env.py  script.py.mako
alembic/templates/generic/: alembic.ini.mako  env.py  script.py.mako
alembic/templates/multidb/: alembic.ini.mako  env.py  script.py.mako
alembic/templates/pylons/: alembic.ini.mako  env.py  script.py.mako
alembic/templates/pyproject/: README  alembic.ini.mako  env.py  pyproject.toml.mako
alembic/templates/pyproject_async/: README  alembic.ini.mako  pyproject.toml.mako
alembic/testing/: __init__.py  assertions.py  config.py  engines.py  env.py  exclusions.py  fixtures.py  mock.py  provision.py  requirements.py  runner.py  schemacompare.py  util.py  warnings.py
alembic/testing/plugin/: __init__.py  bootstrap.py  noseplugin.py  plugin_base.py  provision.py  pytestplugin.py
alembic/testing/suite/: _autogen_fixtures.py  test_autogen_comments.py  test_autogen_computed.py  test_autogen_diffs.py  test_autogen_fks.py  test_environment.py
alembic/util/: __init__.py  compat.py  compat.pyi  editor.py  exc.py  langhelpers.py  messaging.py  messaging.pyi  os_helpers.py  pyfiles.py  pyfiles.pyi  sqla_compat.py
scripts/: alembic
templates/generic/: env.py  script.py.mako
templates/multidb/: env.py  script.py.mako
templates/pylons/: alembic.ini.mako  env.py  script.py.mako
tests/: __init__.py  _autogen_fixtures.py  _large_map.py  conftest.py  requirements.py  test_append_template.py  test_autogen_check_constraints.py  test_autogen_comments.py  test_autogen_composition.py  test_autogen_computed.py  test_autogen_diffs.py  test_autogen_fks.py  test_autogen_identity.py  test_autogen_indexes.py  test_autogen_render.py  test_autogenerate.py  test_batch.py  test_bulk_insert.py  test_command.py  test_config.py  test_ddl.py  test_dispatch.py  test_editor.py  test_environment.py  test_external_dialect.py  test_impl.py  test_messaging.py  test_migrations.py  test_mssql.py  test_mysql.py  test_mysql_enum.py  test_offline_environment.py  test_op.py  test_op_naming_convention.py  test_oracle.py  test_os_helpers.py  test_plugin.py  test_post_write.py  test_postgresql.py  test_revision.py  (+13 more)
tools/: toxnox.py  write_pyi.py
