[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.0",
]

[tool.black]
line-length = 79

[tool.pytest.ini_options]
addopts = "--tb native -v -r sfxX -p no:warnings -p no:logging --maxfail=100"
python_files = "tests/test_*.py"
markers = [
    "backend: tests that should run on all backends; typically dialect-sensitive",
    "mypy: mypy integration / plugin tests (not used by Alembic currently)",
]



[tool.mypy]

exclude = [
    'alembic/template',
    'alembic.testing.*',
]
show_error_codes = true

[[tool.mypy.overrides]]

module = [
    "alembic.*"
]

warn_unused_ignores = true
strict = true



[[tool.mypy.overrides]]
module = [
    'mako.*',
    'sqlalchemy.testing.*'
]
ignore_missing_imports = true
