[metadata]

name = alembic
version = attr: alembic.__version__
description = A database migration tool for SQLAlchemy.
long_description = file: README.rst
long_description_content_type = text/x-rst
url=https://alembic.sqlalchemy.org
author = Mike Bayer
author_email = mike_mp@zzzcomputing.com
license = MIT
license_files = LICENSE


classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Database :: Front-Ends
project_urls =
    Source = https://github.com/sqlalchemy/alembic/
    Documentation = https://alembic.sqlalchemy.org/en/latest/
    Issue Tracker = https://github.com/sqlalchemy/alembic/issues/

[options]
packages = find:
include_package_data = true
zip_safe = false
python_requires = >=3.7

install_requires =
    SQLAlchemy>=1.3.0
    Mako
    importlib-metadata;python_version<"3.9"
    importlib-resources;python_version<"3.9"
    typing-extensions>=4

[options.extras_require]
tz =
    python-dateutil

[options.package_data]
alembic = *.pyi, py.typed

[options.packages.find]
exclude =
    test*
    examples*

[options.exclude_package_data]
'' = test*

[options.entry_points]
console_scripts =
    alembic = alembic.config:main

[egg_info]
tag_build=dev

[upload_docs]
upload-dir = docs/build/output/html

[upload]
sign = 1
identity = C4DAFEE1

[nosetests]
with-sqla_testing = true
where = tests

[flake8]
enable-extensions = G
# E203 is due to https://github.com/PyCQA/pycodestyle/issues/373
ignore =
    A003,
    D,
    E203,E305,E711,E712,E721,E722,E741,
    N801,N802,N806,
    RST304,RST303,RST299,RST399,
    W503,W504
exclude = .venv,.git,.tox,dist,doc,*egg,build
import-order-style = google
application-import-names = alembic,tests
per-file-ignores =
                **/__init__.py:F401
max-line-length = 79

[sqla_testing]
requirement_cls=tests.requirements:DefaultRequirements
profile_file=tests/profiles.txt


[db]
default=sqlite:///:memory:
sqlite=sqlite:///:memory:
sqlite_file=sqlite:///querytest.db
postgresql=postgresql://scott:tiger@127.0.0.1:5432/test
mysql=mysql://scott:tiger@127.0.0.1:3306/test?charset=utf8mb4
mariadb = mariadb://scott:tiger@127.0.0.1:3306/test?charset=utf8mb4
mssql = mssql+pyodbc://scott:tiger^5HHH@mssql2017:1433/test?driver=ODBC+Driver+13+for+SQL+Server
oracle=oracle://scott:tiger@127.0.0.1:1521
oracle8=oracle://scott:tiger@127.0.0.1:1521/?use_ansi=0

[alembic]


[tool:pytest]
addopts= --tb native -v -r sfxX -p no:warnings -p no:logging --maxfail=25
python_files=tests/test_*.py
markers =
    backend: tests that should run on all backends; typically dialect-sensitive

[mypy]
show_error_codes = True
allow_redefinition = True

[mypy-mako.*]
ignore_missing_imports = True

[mypy-sqlalchemy.testing.*]
ignore_missing_imports = True

[mypy-importlib_resources.*]
ignore_missing_imports = True

[mypy-importlib_metadata.*]
ignore_missing_imports = True
