[metadata]

name = alembic
version = attr: alembic.__version__
description = A database migration tool for SQLAlchemy.
long_description = file: README.rst
long_description_content_type = text/x-rst
url=https://alembic.sqlalchemy.org
author = Mike Bayer
author_email = mike_mp@zzzcomputing.com
license = MIT
license_files = LICENSE


classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Database :: Front-Ends
project_urls =
    Documentation = https://alembic.sqlalchemy.org/en/latest/
    Changelog = https://alembic.sqlalchemy.org/en/latest/changelog.html
    Source = https://github.com/sqlalchemy/alembic/
    Issue Tracker = https://github.com/sqlalchemy/alembic/issues/
[options]
packages = find_namespace:
include_package_data = true
zip_safe = false
python_requires = >=3.8

install_requires =
    SQLAlchemy>=1.3.0
    Mako
    importlib-metadata;python_version<"3.9"
    importlib-resources;python_version<"3.9"
    typing-extensions>=4

[options.extras_require]
tz =
    backports.zoneinfo;python_version<"3.9"
    tzdata

[options.package_data]
alembic = *.pyi, py.typed

[options.packages.find]
include=alembic*
exclude =
    test*
    examples*

[options.exclude_package_data]
'' = test*

[options.entry_points]
console_scripts =
    alembic = alembic.config:main

[egg_info]
tag_build=dev

[upload_docs]
upload_dir = docs/build/output/html

[upload]
sign = 1
identity = C4DAFEE1

[nosetests]
with-sqla_testing = true
where = tests

[flake8]
enable-extensions = G
# E203 is due to https://github.com/PyCQA/pycodestyle/issues/373
ignore =
    A003,A005
    D,
    E203,E305,E704,E711,E712,E721,E722,E741,
    N801,N802,N806,
    RST304,RST303,RST299,RST399,
    W503,W504
exclude = .venv,.git,.tox,dist,doc,*egg,build
filename = *.py,*.pyi
import-order-style = google
application-import-names = alembic,tests
per-file-ignores =
                **/__init__.py:F401
                **/*.pyi:E302,E704,E266
max-line-length = 79

[sqla_testing]
requirement_cls=tests.requirements:DefaultRequirements
profile_file=tests/profiles.txt


[db]
default=sqlite:///:memory:
sqlite=sqlite:///:memory:
sqlite_file=sqlite:///querytest.db
postgresql=postgresql://scott:tiger@127.0.0.1:5432/test
psycopg=postgresql+psycopg://scott:tiger@127.0.0.1:5432/test
mysql=mysql://scott:tiger@127.0.0.1:3306/test?charset=utf8mb4
mariadb=mariadb://scott:tiger@127.0.0.1:3306/test?charset=utf8mb4
mssql=mssql+pyodbc://scott:tiger^5HHH@mssql2017:1433/test?driver=ODBC+Driver+18+for+SQL+Server&TrustServerCertificate=yes
oracle=oracle://scott:tiger@127.0.0.1:1521
oracle8=oracle://scott:tiger@127.0.0.1:1521/?use_ansi=0




